--- a/packages/core-js/package.json
+++ b/packages/core-js/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wisemapping/core-js",
-    "version": "0.4.0",
+    "version": "1.0.0",
     "description": "WiseMapping - Core Common Libraries",
     "homepage": "http://www.wisemapping.org/",
     "license": "MIT",
@@ -9,7 +9,7 @@
         "src"
     ],
     "publishConfig": {
-        "registry": "https://registry.yarnpkg.com"
+        "registry": "https://verdaccio.heartfull-mind.space/"
     },
     "repository": {
         "type": "git",
