--- a/packages/mindplot/package.json
+++ b/packages/mindplot/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wisemapping/mindplot",
-    "version": "10.6.1",
+    "version": "1.0.0",
     "description": "WiseMapping - Mindplot Canvas Library",
     "homepage": "http://www.wisemapping.org/",
     "directories": {
@@ -14,7 +14,7 @@
         "dist"
     ],
     "publishConfig": {
-        "registry": "http://localhost:4873"
+        "registry": "https://verdaccio.heartfull-mind.space/"
     },
     "repository": {
         "type": "git",
