--- a/packages/mindplot/package.json
+++ b/packages/mindplot/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wisemapping/mindplot",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "description": "WiseMapping - Mindplot Canvas Library",
     "homepage": "http://www.wisemapping.org/",
     "directories": {
@@ -33,8 +33,8 @@
     "private": false,
     "dependencies": {
         "@mat3e-ux/stars": "file:/home/manuel/Development/mat3e-stars/packages/stars",
-        "@wisemapping/core-js": "^0.4.0",
-        "@wisemapping/web2d": "^0.4.0",
+        "@wisemapping/core-js": "14.0.0",
+        "@wisemapping/web2d": "1.0.0",
         "bootstrap": "4.6.1",
         "feather-icons": "^4.29.0",
         "jest": "^27.4.5",
