--- a/packages/editor/package.json
+++ b/packages/editor/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@wisemapping/editor",
-  "version": "7.0.1",
+  "version": "1.1.5",
   "main": "dist/editor.bundle.js",
+  "publishConfig": {
+    "registry": "https://verdaccio.heartfull-mind.space/"
+  },
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "playground": "webpack serve --config webpack.playground.js",
@@ -53,7 +56,7 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.4",
-    "@wisemapping/mindplot": "10.5.0",
+    "@wisemapping/mindplot": "1.0.21",
     "bootstrap": "4.6.1",
     "popper.js": "^1.16.1",
     "react": "17.0.2",
